fix: digital option tab scrollbar css

--- a/src/features/components/organisms/available-options/styles.module.scss
+++ b/src/features/components/organisms/available-options/styles.module.scss
@@ -12,6 +12,7 @@
 .tab_container {
     position: relative;
     overflow: scroll;
+    scrollbar-width: none;
     &::-webkit-scrollbar {
         display: none;
     }
